# hw_01_12

./: README.md  pyproject.toml
hw_01_12/: functions.py  main.py  stocks_archive_5years.zip.yaml
